--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "version": "0.0.1",
   "dependencies": {
     "express": "3.3.4",
-    "connect": "~2.8.8",
+    "connect": "~2.8.4",
     "debug": "~0.7.2",
-    "cookie": "0.1.0",
+    "cookie": "0.0.x",
     "jade": "~0.33.0",
     "socket.io": "~0.9.16",
-    "redis": "0.10.0",
+    "redis": "0.7.2",
     "connect-redis": "1.4.x",
     "passport": "~0.1.17",
     "passport-facebook": "~0.1.5",
     "passport-twitter": "~0.1.5",
-    "type-of": "2.0.0"
+    "component-type": "component/type"
   },
   "engines": {
     "node": ">= 0.8.0",
